@@ -28,3 +28,4 @@ bugtracker.mailto = bug-run-parts@rt.cpan.org
 ; Test related
 [Git::Check]
 [Test::Perl::Critic]
+[Test::Kwalitee]
